--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
 
 </html>
 
+<STYle>.form {
+    border: solid 5px;
+    text-align: center;
+    width: 450px;
+    height: 350px;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: yellow;
+ 
+ 
+ }
+ 
+ 
+ .topo {
+ 
+ 
+    background-color: #46ACC2;
+    display: flex;
+    padding: 100px;
+    font-family: sans-serif;
+    color: white;
+ }
+ </STYle>
 
-
-.form {
-   border: solid 5px;
-   text-align: center;
-   width: 450px;
-   height: 350px;
-   padding: 0;
-   margin: 0;
-   position: absolute;
-   top: 30%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   background-color: yellow;
-
-
-}
-
-
-.topo {
-
-
-   background-color: #46ACC2;
-   display: flex;
-   padding: 100px;
-   font-family: sans-serif;
-   color: white;
-}
